--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-body{
-    background-image: linear-gradient(#0000a5, #001123) !important;
+
+html,body{
+    width: 100%;
+    height:100%;
 }
 .jumbotron {
    background-color: transparent;
@@ -19,3 +21,45 @@ body{
 .div-center{
     margin: auto;
 }
+
+.secao {
+    position: relative;
+  }
+  
+#secao-01{
+    background-image: linear-gradient(#0000a5, #001123) !important;
+}
+#secao-02{
+    background-image: linear-gradient(#001123, #0000a5) !important;
+}
+  .icone-scroll {
+    position: absolute;
+    bottom: 3em;
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    border-radius: 50%;
+    left: 50%;
+    margin-left: -25px;
+    cursor: pointer;
+  }
+  .scroll {
+    width: 15px;
+    height: 15px;
+    border-right: 2px solid #001083;
+    border-bottom: 2px solid #001083;
+    display: inline-block;
+    position: relative;
+  }
+  .scroll-next {
+    transform: rotate(45deg);
+    margin: 14px 0 0 16.5px;
+  }
+  .scroll-top {
+    transform: rotate(225deg);
+    margin: 19px 0 0 17px;
+  }
+  .scroll-top + .scroll-top {
+    top: -15px;
+    margin-top: 0;
+  }
